# ffilupa

./: .appveyor.yml  .azure-pipelines.yml  .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  COPYRIGHT  LICENSE  MANIFEST  MANIFEST.in  Makefile  README.rst  build_embedding.py  callback.c  demo_repl.py  dist.info  ffibuilder_lua.py  ffilupa-2.3.0.dev1-1.rockspec  ffilupa.lua  lua_capi.h  lupa  mypip.py  requirements.txt  setup.cfg  setup.py  tests.py  tool.py  tox.ini
c/: callback.c  findlua.py  lua_cdef.h
doc/: conf.py  index.rst
doc/ffilupa/: __init__.rst  callback.rst  compat.rst  compile.rst  exception.rst  index.rst  protocol.rst  py_from_lua.rst  py_to_lua.rst  runtime.rst  util.rst
docs/: Makefile  conf.py  ffilupa.callback.rst  ffilupa.compat.rst  ffilupa.compile.rst  ffilupa.exception.rst  ffilupa.protocol.rst  ffilupa.py_from_lua.rst  ffilupa.py_to_lua.rst  ffilupa.rst  ffilupa.runtime.rst  ffilupa.util.rst  index.rst  lowlevel.rst  make.bat  modules.rst  start.rst
docs/_static/: custom.css
docs/guide/: installation.rst  start.rst
ffibuild/: lua.py
ffilupa/: __init__.py  _util.py  all.py  callback.py  compat.py  compile.py  embedding.py  exception.py  libdesc.py  lualibs.py  metatable.py  protocol.py  py_from_lua.py  py_to_lua.py  runtime.py  util.py
ffilupa/lualibs/: __init__.py  _base.py  _build_options.py  _builder_data.py  _datadir.py  _glibc.py  _pep425tags.py  _pkginfo.py  builder.py
ffilupa/tests/: __init__.py  test.py
findlua/: CMakeLists_template.txt  __init__.py  caller_cdef.h  cdef.h  embedding-template.py  embedding.c  embedding.h  lua_cdef.h  source.c
tests/: test_LuaObject.py  test_compat.py  test_compile.py  test_exception.py  test_init.py  test_lualibs.py  test_metatable.py  test_protocol.py  test_py_from_lua.py  test_py_to_lua.py  test_refcounting.py  test_runtime.py  test_util.py
tools/: distclean.sh  normalize.py  update_manifest.py
