[metadata]
name = ffilupa
version = attr: ffilupa.__version__
description = A modern two-way bridge between Python and Lua
long_description = file: README.rst
keywords = cffi, lua, binding
license = LGPLv3
url = https://github.com/TitanSnow/ffilupa
author = TitanSnow
author_email = tttnns1024@gmail.com
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Other Scripting Engines
    Operating System :: OS Independent
    Topic :: Software Development

[options]
packages = ffilupa
setup_requires =
    cffi~=1.10
    packaging~=19.0
    dataclasses~=0.6;python_version=='3.6'
install_requires =
    cffi~=1.10
    packaging~=19.0
    dataclasses~=0.6;python_version=='3.6'
python_requires = ~=3.6
